[package]
name = "timetracker-rs"
version = "0.1.0"
description = "A small time tracker for projects written in Rust"
authors = ["Björn Guth <scatty@bguth.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
