[package]
name = "timetracker"
version = "0.1.0"
description = "A small time tracker for projects written in Rust"
authors = ["Björn Guth <scatty@bguth.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
serde = {version = "1.0.104", features = ["derive"]}
serde_json = "1.0.45"
proptest = "0.9.5"
chrono = { version = "0.4.10", features = ["serde"] }
prettytable-rs = "0.8.0"
unicode-segmentation = "1.6.0"
terminal_size = "0.1.15"
